syntax = "proto3";

package hss_science.accounts.v1;

option go_package = "github.com/barn0w1/hss-science/server/gen/internal/accounts/v1;accountsv1";

service AccountsInternalService {
  // Verify and consume auth code (one-time)
  rpc VerifyAuthCode(VerifyAuthCodeRequest)
      returns (VerifyAuthCodeResponse);
}

// ===== Requests / Responses =====

message VerifyAuthCodeRequest {
  string auth_code = 1;
  string audience  = 2; // e.g. "drive"
}

message VerifyAuthCodeResponse {
  string user_id = 1;
  string role    = 2;

  map<string, string> claims = 10;
}
